--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <a href="index.html">
-        <img class="main-logo" src="#" alt="Логотип Седона" />
+        <img class="main-logo" src="images/icons/logo-sedona.svg" width="140" height="70" alt="Логотип Седона" />
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -160,7 +160,8 @@
           <a class="product-card-link" href="#">
             <img
               class="product-card-img"
-              src="#"
+              src="images/catalog/hotel-1.jpg"
+              width="300" height="212"
               alt="Изображение показывает вид из темной пещеры на ночное небо, усеянное звездами.
             "
             />
@@ -184,7 +185,8 @@
           <a class="product-card-link" href="#">
             <img
               class="product-card-img"
-              src="#"
+              src="images/catalog/hotel-2.jpg"
+              width="300" height="212"
               alt="Главный объект фото - скалистые горы оранжево-красного цвета."
             />
             <h3 class="product-card-title">Villas at Poco Diablo</h3>
@@ -207,7 +209,8 @@
           <a class="product-card-link" href="#">
             <img
               class="product-card-img"
-              src="#"
+              src="images/catalog/hotel-3.jpg"
+              width="300" height="212"
               alt="Главный объект - массивная скалистая гора из красного песчаника."
             />
             <h3 class="product-card-title">Desert Quail Inn</h3>
@@ -230,7 +233,8 @@
           <a class="product-card-link" href="#">
             <img
               class="product-card-img"
-              src="#"
+              src="images/catalog/hotel-4.jpg"
+              width="300" height="212"
               alt="• Изображение представляет ночной пейзаж с крупной скалистой горой в центре."
             />
             <h3 class="product-card-title">GreenTree Inn</h3>
@@ -293,26 +297,26 @@
     </main>
 
     <footer class="main-footer">
-      <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="button" href="#">
+      <ul class="social-list">
+        <li class="social-item">
+          <a class="button-social vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Vk</span>
           </a>
         </li>
-        <li class="footer-social-item">
-          <a class="button" href="#">
+        <li class="social-item">
+          <a class="button-social telegram" href="https://t.me/htmlacademy ">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
-        <li class="footer-social-item">
-          <a class="button" href="#">
+        <li class="social-item">
+          <a class="button-social youtube" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
       </ul>
       <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="#" alt="Логотип html academy" />
+      <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="images/icons/brand-htmlacademy.svg" width="115" height="33" alt="Логотип html academy">
       </a>
     </footer>
   </body>
