--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <header class="main-header">
-      <img class="main-logo" src="index.html" alt="Логотип Седона">
+      <a href="index.html">
+        <img class="main-logo" src="images/icons/logo-sedona.svg" width="140" height="70" alt="Логотип Седона" >
+      </a>
+
       <nav class="navigation">
         <ul class="navigation-list">
         <li class="navigation-item">
@@ -42,7 +45,7 @@
     <main class="main-index">
       <section class="slogan">
         <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-        <img src="#" alt="Welcome to the gorgias Sedona Because the grand canyon sucks!">
+        <img src="images/index-bacground.jpg" width="458" height="352" alt="Welcome to the gorgias Sedona Because the grand canyon sucks!" >
       </section>
 
       <section class="advantages">
@@ -51,7 +54,7 @@
         <div class="advantages-town">
           <h3 class="advantages-title">Настоящий городок</h3>
           <p class="advantages-discription">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          <img src="#" alt="На изображении показано здание с деревянным балконом и вывеской «OPEN RANGE GRILL & TAVERN». На балконе развеваются американские флаги. На переднем плане — зелёные и ярко-розовые цветы, а также растения, частично размытые.">
+          <img src="images/photo-1.jpg" width="800" alt="На изображении показано здание с деревянным балконом и вывеской «OPEN RANGE GRILL & TAVERN». На балконе развеваются американские флаги. На переднем плане — зелёные и ярко-розовые цветы, а также растения, частично размытые.">
         </div>
         <div class="advantages-square">
           <h3 class="advantages-title">Небольшая площадь</h3>
@@ -66,7 +69,7 @@
           <p class="advantages-discription">Большинство едет в Гранд Каньон и толпится там</p>
         </div>
         <div class="advantages-bridge">
-          <img src="#" alt="туристическая достопримечательность на заднем плане
+          <img src="images/photo-2.jpg" width="800" alt="туристическая достопримечательность на заднем плане
           Каньон: Седона, тропа моста Дьявола">
           <h3 class="advantages-title">Там есть мост дьявола</h3>
           <p class="advantages-discription">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -77,15 +80,18 @@
         <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
         <p>Опытный персонал и качественное обслуживание!</p>
         <div class="rest-housing">
+          <img src="images/icons/variant-housing.svg" width="75" height="72" alt="">
           <h3 class="rest-title">Жильё</h3>
           <p class="rest-discription">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
         </div>
         <div class="rest-food">
+          <img src="images/icons/variant-eating.svg" width="75" height="72" alt="">
           <h3 class="rest-title">Еда</h3>
           <p class="rest-discription">Всегда заказывайте
           топовый фирменный бургер, вы не разочаруетесь!</p>
         </div>
         <div class="rest-souvenir">
+          <img src="images/icons/variant-souvenir.svg" width="75" height="72" alt="">
           <h3 class="rest-title">Сувениры</h3>
           <p class="rest-discription">Не только китайского,
           но и настоящего местного производства!</p>
@@ -107,31 +113,29 @@
           <button class="button" type="submit">Подписаться</button>
         </form>
       </section>
-
-
     </main>
 
     <footer class="main-footer">
       <ul class="social-list">
         <li class="social-item">
-          <a class="button-social" href="#">
+          <a class="button-social vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">Vk</span>
           </a>
         </li>
         <li class="social-item">
-          <a class="button-social" href="#">
+          <a class="button-social telegram" href="https://t.me/htmlacademy ">
             <span class="visually-hidden">Telegram</span>
           </a>
         </li>
         <li class="social-item">
-          <a class="button-social" href="#">
+          <a class="button-social youtube" href="https://www.youtube.com/user/htmlacademyru">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
       </ul>
       <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="#" alt="Логотип html academy">
+        <img src="images/icons/brand-htmlacademy.svg" width="115" height="33" alt="Логотип html academy">
       </a>
     </footer>
   </body>
