--- a/index.html
+++ b/index.html
@@ -1,149 +1,172 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
   </head>
+
   <body>
+    <div class="container">
+      <!-- Шапка сайта -->
+      <header class="main-header">
+        <a href="index.html">
+          <img class="main-logo" src="images/icons/logo-sedona.svg" width="140" height="70" alt="Логотип Седона">
+        </a>
+        <nav class="navigation">
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link" href="index.html">Главная</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О седоне</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-list navigation-user">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-search" href="#">
+                <span class="visually-hidden">Поиск</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-selected" href="#">
+                <span class="visually-hidden">Корзина(избранное)</span>
+              </a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link-button button" href="#">Хочу сюда!</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-    <header class="main-header">
-      <a href="index.html">
-        <img
-          class="main-logo"
-          src="images/icons/logo-sedona.svg"
-          width="140"
-          height="70"
-          alt="Логотип Седона"
-        />
-      </a>
-      <nav class="navigation">
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">О седоне</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="catalog.html"
-              >Гостиницы</a
-            >
-          </li>
-        </ul>
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link-search" href="#">
-              <span class="visually-hidden">Поиск</span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link-selected" href="#">
-              <span class="visually-hidden">Корзина(избранное)</span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link button" href="#">Хочу сюда!</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+      <!-- контент -->
+      <main class="main-index">
+        <section class="slogan">
+          <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+          <img src="images/icons/welcome.svg" width="458" height="352"
+            alt="Welcome to the gorgias Sedona Because the grand canyon sucks!">
+        </section>
 
-    <main class="main-index">
-      <section class="slogan">
-        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-        <img src="images/icons/welcome.svg" width="458" height="352" alt="Welcome to the gorgias Sedona Because the grand canyon sucks!" >
-      </section>
+        <!-- Секция Преимущества -->
+        <section class="advantages">
+          <h2 class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <p class="text-basic">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
-      <section class="advantages">
-        <h2 class="section-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="text-basic">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <div class="advantages-block advantages-town">
-          <h3 class="advantages-title">Настоящий городок</h3>
-          <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-        </div>
-        <img class="advantages-image" src="images/photo-1.jpg" width="800" alt="На изображении показано здание с деревянным балконом и вывеской «OPEN RANGE GRILL & TAVERN». На балконе развеваются американские флаги. На переднем плане — зелёные и ярко-розовые цветы, а также растения, частично размытые.">
-        <div class="advantages-block advantages-square">
-          <h3 class="advantages-title">Небольшая площадь</h3>
-          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-        </div>
-        <div class="advantages-block advantages-road">
-          <h3 class="advantages-title">Красивая дорога</h3>
-          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-        </div>
-        <div class="advantages-block advantages-turist">
-          <h3 class="advantages-title">Мало туристов</h3>
-          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-        </div>
-        <img class="advantages-image" src="images/photo-2.jpg" width="800" alt="туристическая достопримечательность на заднем плане
+          <div class="advantages-block">
+            <div class="advantages-town">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
+
+            <img class="advantages-image" src="images/photo-1.jpg" width="800"
+              alt="На изображении показано здание с деревянным балконом и вывеской «OPEN RANGE GRILL & TAVERN». На балконе развеваются американские флаги. На переднем плане — зелёные и ярко-розовые цветы, а также растения, частично размытые.">
+          </div>
+
+          <div class="advantages-block">
+            <div class="advantages-square">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+            </div>
+
+            <div class="advantages-road">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </div>
+
+            <div class="advantages-turist">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </div>
+          </div>
+
+
+          <div class="advantages-block">
+            <img class="advantages-image" src="images/photo-2.jpg" width="800" alt="туристическая достопримечательность на заднем плане
           Каньон: Седона, тропа моста Дьявола">
-        <div class="advantages-block advantages-bridge">
-          <h3 class="advantages-title">Там есть мост дьявола</h3>
-          <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-        </div>
-      </section>
+            <div class="advantages-bridge">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+          </div>
+        </section>
 
-      <section class="rest">
-        <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p class="text-basic">Опытный персонал и качественное обслуживание!</p>
-        <div class="rest-block rest-housing">
-          <img class="rest-image" src="images/icons/variant-housing.svg" width="75" height="72" alt="">
-          <h3 class="rest-title">Жильё</h3>
-          <p class="rest-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-        </div>
-        <div class="rest-block rest-food">
-          <img class="rest-image" src="images/icons/variant-eating.svg" width="75" height="72" alt="">
-          <h3 class="rest-title">Еда</h3>
-          <p class="rest-description">Всегда заказывайте
-          топовый фирменный бургер, вы не разочаруетесь!</p>
-        </div>
-        <div class="rest-block rest-souvenir">
-          <img class="rest-image" src="images/icons/variant-souvenir.svg" width="75" height="72" alt="">
-          <h3 class="rest-title">Сувениры</h3>
-          <p class="rest-description">Не только китайского,
-          но и настоящего местного производства!</p>
-        </div>
-      </section>
+        <!-- Секция отдых -->
+        <section class="relax">
+          <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+          <p class="text-basic">Опытный персонал и качественное обслуживание!</p>
+          <div class="relax-block">
+            <div class="relax-housing">
+              <img class="relax-image" src="images/icons/variant-housing.svg" width="75" height="72" alt="">
+              <h3 class="relax-title">Жильё</h3>
+              <p class="relax-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </div>
+            <div class="relax-food">
+              <img class="relax-image" src="images/icons/variant-eating.svg" width="75" height="72" alt="">
+              <h3 class="relax-title">Еда</h3>
+              <p class="relax-description">Всегда заказывайте
+                топовый фирменный бургер, вы не разочаруетесь!</p>
+            </div>
+            <div class="relax-souvenir">
+              <img class="relax-image" src="images/icons/variant-souvenir.svg" width="75" height="72" alt="">
+              <h3 class="relax-title">Сувениры</h3>
+              <p class="relax-description">Не только китайского,
+                но и настоящего местного производства!</p>
+            </div>
+          </div>
+        </section>
 
-      <section class="interest">
-        <h2 class="section-title">Заинтересовались?</h2>
-        <p class="text-basic">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
-      </section>
+        <!-- Секция Заинтересовались -->
+        <section class="interest">
+          <h2 class="section-title">Заинтересовались?</h2>
+          <p class="text-basic">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в
+            Седоне
+          </p>
+          <button class="button" type="button">ПОИСК ГОСТИНИЦЫ В седоне</button>
+        </section>
 
-      <section class="mailing">
-        <h2 class="section-title mailing-title">Подпишитесь на рассылку</h2>
-        <p class="text-basic">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
-          <label class="visually-hidden" for="subscription_email">Ваш e-mail</label>
-          <input class="mailing-input" placeholder="Ваш e-mail" type="text" name="mailing" id="subscription-email" required>
-          <button class="button additional-button" type="submit">Подписаться</button>
-        </form>
-      </section>
-    </main>
+        <!-- Секция с формой для подписки -->
+        <section class="mailing">
+          <h2 class="section-title mailing-title">Подпишитесь на рассылку</h2>
+          <p class="text-basic">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="mailing-form" action="https://echo.htmlacademy.ru/" method="get">
+            <label class="visually-hidden" for="subscription_email">Ваш e-mail</label>
+            <input class="mailing-input" placeholder="Ваш e-mail" type="text" name="mailing" id="subscription-email"
+              required>
+            <button class="button additional-button" type="submit">Подписаться</button>
+          </form>
+        </section>
+      </main>
 
-    <footer class="main-footer">
-      <ul class="social-list">
-        <li class="social-item">
-          <a class="button-social-vk" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">Vk</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="button-social-telegram" href="https://t.me/htmlacademy ">
-            <span class="visually-hidden">Telegram</span>
-          </a>
-        </li>
-        <li class="social-item">
-          <a class="button-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">YouTube</span>
-          </a>
-        </li>
-      </ul>
-      <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
-        <p class="visually-hidden">html academy</p>
-      </a>
-    </footer>
+      <!-- Подвал сайта -->
+      <footer class="main-footer">
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="button-social-vk" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Vk</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button-social-telegram" href="https://t.me/htmlacademy ">
+              <span class="visually-hidden">Telegram</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+        </ul>
+        <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss">
+          <p class="visually-hidden">html academy</p>
+        </a>
+      </footer>
+    </div>
   </body>
+
 </html>
