--- a/index.html
+++ b/index.html
@@ -59,52 +59,46 @@
             <p class="text-basic">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           </div>
 
-          <div class="advantages-block">
-            <div class="advantages-town">
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            </div>
 
-            <img class="advantages-image" src="images/photo-1.jpg" width="800"
-              alt="На изображении показано здание с деревянным балконом и вывеской «OPEN RANGE GRILL & TAVERN». На балконе развеваются американские флаги. На переднем плане — зелёные и ярко-розовые цветы, а также растения, частично размытые.">
+          <div class="advantages-town">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
 
-          <div class="advantages-block">
-            <div class="advantages-square">
-              <h3 class="advantages-title">Небольшая площадь</h3>
-              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-            </div>
+          <img class="advantages-image-1" src="images/photo-1.jpg" width="800"
+            alt="На изображении показано здание с деревянным балконом и вывеской «OPEN RANGE GRILL & TAVERN». На балконе развеваются американские флаги. На переднем плане — зелёные и ярко-розовые цветы, а также растения, частично размытые.">
 
-            <div class="advantages-road">
-              <h3 class="advantages-title">Красивая дорога</h3>
-              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </div>
-
-            <div class="advantages-turist">
-              <h3 class="advantages-title">Мало туристов</h3>
-              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-            </div>
+          <div class="advantages-square">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </div>
 
+          <div class="advantages-road">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </div>
 
-          <div class="advantages-block">
-            <img class="advantages-image" src="images/photo-2.jpg" width="800" alt="туристическая достопримечательность на заднем плане
+          <div class="advantages-turist">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </div>
+
+          <img class="advantages-image-2" src="images/photo-2.jpg" width="800" alt="туристическая достопримечательность на заднем плане
           Каньон: Седона, тропа моста Дьявола">
-            <div class="advantages-bridge">
-              <h3 class="advantages-title">Там есть мост дьявола</h3>
-              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            </div>
+          <div class="advantages-bridge">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
+
         </section>
 
         <!-- Секция отдых -->
         <section class="relax">
           <div class="relax-intro">
-<h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-          <p class="text-basic">Опытный персонал и качественное обслуживание!</p>
+            <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+            <p class="text-basic">Опытный персонал и качественное обслуживание!</p>
           </div>
 
-          <div class="relax-block">
             <div class="relax-housing">
               <img class="relax-image" src="images/icons/variant-housing.svg" width="75" height="72" alt="">
               <h3 class="relax-title">Жильё</h3>
@@ -122,7 +116,6 @@
               <p class="relax-description">Не только китайского,
                 но и настоящего местного производства!</p>
             </div>
-          </div>
         </section>
 
         <!-- Секция Заинтересовались -->
